--- a/i18n/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/i18n/locale/pt_BR/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  Beta\n"
 "Report-Msgid-Bugs-To: renzo.n@gmail.com\n"
-"POT-Creation-Date: 2013-09-03 22:28-0300\n"
+"POT-Creation-Date: 2013-09-04 00:08-0300\n"
 "PO-Revision-Date: 2013-08-28 01:34-0300\n"
 "Last-Translator: Renzo nuccitelli <renzo.n@gmail.com>\n"
 "Language-Team: en_US <LL@li.org>\n"
@@ -365,7 +365,7 @@ msgstr ""
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/sites.html:14
 msgid "Domain"
-msgstr ""
+msgstr "Domínio"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/sites.html:15
 msgid "Token"
