--- a/i18n/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/i18n/locale/pt_BR/LC_MESSAGES/messages.po
@@ -6,44 +6,44 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version:  Beta\n"
-"Report-Msgid-Bugs-To: renzo.n@gmail.com\n"
-"POT-Creation-Date: 2013-09-24 05:31-0300\n"
-"PO-Revision-Date: 2013-08-28 01:34-0300\n"
-"Last-Translator: Renzo nuccitelli <renzo.n@gmail.com>\n"
-"Language-Team: en_US <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2013-09-24 16:49-0300\n"
+"PO-Revision-Date: 2013-09-24 16:26-0300\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: pt_BR <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
+"Generated-By: Babel 1.3\n"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:31
 msgid "Wrong site id or token"
-msgstr ""
+msgstr "Site id ou token errado"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:53
 #, python-format
 msgid "Invalid domain: %(domain)s"
-msgstr ""
+msgstr "Domínio inválido: %(domain)s"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:57
 #, python-format
 msgid "Only http or https allowed, not %(protocol)s"
-msgstr ""
+msgstr "Somente http ou https permitidos, não %(protocol)s"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:93
 msgid "Spam not allowed"
-msgstr ""
+msgstr "Spam proibido"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:229
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/login.py:249
 msgid "Invalid Call"
-msgstr ""
+msgstr "Chamada Inválida"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/security.py:59
 msgid "Must be logged to make this call"
-msgstr ""
+msgstr "Voce precisa estar logado para fazer essa chamada"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/security.py:79
 msgid "XSRF Atack!"
@@ -51,40 +51,40 @@ msgstr ""
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/sites.py:33
 msgid "Domain should not be empty"
-msgstr ""
+msgstr "Domínio não pode ser vazio"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/sites.py:74
 msgid "Site not found"
-msgstr ""
+msgstr "Site não encontrado"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/sites.py:91
 msgid "You have no admin permission"
-msgstr ""
+msgstr "Não possui permissão de admin"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/sites.py:93
 msgid "Login with your Google account"
-msgstr ""
+msgstr "Faça login com su a conta Google"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/users.py:22
 msgid "Email is required"
-msgstr ""
+msgstr "Email obrigatório"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/users.py:26
 msgid "Email is invalid"
-msgstr ""
+msgstr "Email inválido"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/users.py:61
 msgid "User not found"
-msgstr ""
+msgstr "Usuário não encontrado"
 
 #: /home/renzo/PycharmProjects/pswdless/src/pswdless/users.py:72
 msgid "One of user id or email must be present"
-msgstr ""
+msgstr "user id ou email devem estar presentes"
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/task.py:42
+#: /home/renzo/PycharmProjects/pswdless/src/web/task.py:41
 #, python-format
 msgid "%(site)s Login Link"
-msgstr ""
+msgstr "Link de login de %(site)s "
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:17
 msgid "API Documentation"
@@ -102,21 +102,21 @@ msgstr "Esse documento fornece a informação necessaria"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:25
 msgid "Table of Contents"
-msgstr ""
+msgstr "Índice"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:27
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:36
 msgid "Overview"
-msgstr ""
+msgstr "Visão Geral"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:28
 msgid "Summary"
-msgstr ""
+msgstr "Sumário"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:29
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:156
 msgid "Registering Sites"
-msgstr ""
+msgstr "Registrando Sites"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/api_home.html:40
 msgid ""
@@ -290,36 +290,36 @@ msgid ""
 "                                    logged."
 msgstr ""
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:82
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:83
 msgid "Home"
 msgstr ""
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:85
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:86
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/sites_mock.html:33
 msgid "My Sites"
 msgstr "Meus Sites"
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:88
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:89
 msgid "API"
 msgstr ""
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:91
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:92
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/languages.html:6
 msgid "Languages"
 msgstr "Línguas"
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:104
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:105
 msgid ""
 "\n"
 "                                        Logout"
 msgstr ""
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:111
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:112
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login_required.html:10
 msgid "Type your email"
 msgstr ""
 
-#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:113
+#: /home/renzo/PycharmProjects/pswdless/src/web/templates/base.html:114
 msgid ""
 "\n"
 "                                        Login"
@@ -445,23 +445,22 @@ msgstr ""
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login.html:5
 msgid "Login Message"
-msgstr ""
+msgstr "Mensagem de Login"
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login.html:8
 #, python-format
 msgid " Check your email. %(APP_NAME)s will send you a link so you can login."
-msgstr ""
+msgstr "Confira seu email. %(APP_NAME)s enviará um link para voce fazer o login."
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login.html:12
 msgid ""
 " Don't forget checking the spam box, once some email providers can "
 "automatically filter it."
-msgstr ""
+msgstr "Não esqueça de conferir a caixa de Spam. Alguns podem filtrar o email."
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login_email.txt:1
-#, python-format
+#, fuzzy, python-format
 msgid ""
-"\n"
 "\n"
 " Hi,\n"
 "   You are receiving this automatic email because you've have asked the "
@@ -475,7 +474,6 @@ msgid ""
 "\n"
 "   Thanks,\n"
 "   %(APP_NAME)s\n"
-"\n"
 msgstr ""
 " Olá,\n"
 "   Você está recebendo esse email automático porque solicitou para logar "
