--- a/i18n/locale/messages.pot
+++ b/i18n/locale/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-09-24 16:49-0300\n"
+"POT-Creation-Date: 2013-09-24 18:15-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -455,10 +455,9 @@ msgstr ""
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login_email.txt:1
 #, python-format
 msgid ""
-"\n"
-" Hi,\n"
+"Hi,\n"
 "   You are receiving this automatic email because you've have asked the "
-"website %(domain)s to log in.\n"
+"website %(site)s to log in.\n"
 "\n"
 "   If you want log in, click or copy the following link in your browser:\n"
 "\n"
@@ -467,7 +466,7 @@ msgid ""
 "   If you haven't asked to log in, please disregard this email.\n"
 "\n"
 "   Thanks,\n"
-"   %(APP_NAME)s\n"
+"   %(APP_NAME)s"
 msgstr ""
 
 #: /home/renzo/PycharmProjects/pswdless/src/web/templates/login_error.html:8
